--- a/src/Parasyte/Parasyte.vcxproj.filters
+++ b/src/Parasyte/Parasyte.vcxproj.filters
@@ -309,6 +309,12 @@
     <ClInclude Include="CoDBO3Handler.h">
       <Filter>Header Files\Handlers</Filter>
     </ClInclude>
+    <ClInclude Include="CoDBO6Handler.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="OodleDecompressorV4.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="pch.cpp">
@@ -571,6 +577,12 @@
     </ClCompile>
     <ClCompile Include="CoDBO3Handler.cpp">
       <Filter>Source Files\Handlers</Filter>
+    </ClCompile>
+    <ClCompile Include="CoDBO6Handler.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="OodleDecompressorV4.cpp">
+      <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
